fixed serde issue, tokendata is handled as u32 upgraded serde to version 36 in project

--- a/runtime/solo/Cargo.toml
+++ b/runtime/solo/Cargo.toml
@@ -69,8 +69,9 @@ ajuna-primitives          = { default-features = false, path = "../../primitives
 pallet-ajuna-gameregistry = { default-features = false, path = "../../pallets/ajuna-gameregistry" }
 pallet-ajuna-matchmaker   = { default-features = false, path = "../../pallets/ajuna-matchmaker" }
 pallet-ajuna-runner       = { default-features = false, path = "../../pallets/ajuna-runner" }
+#pallet-ajuna-template     = { default-features = false, path = "../../pallets/ajuna-template" }
 pallet-ajuna-nft          = { default-features = false, path = "../../pallets/ajuna-nft" }
-#pallet-ajuna-auction      = { default-features = false, path = "../../pallets/ajuna-auction" }
+pallet-ajuna-auction      = { default-features = false, path = "../../pallets/ajuna-auction" }
 
 [features]
 default = [ "std" ]
@@ -99,6 +100,7 @@ std = [
     "pallet-ajuna-gameregistry/std",
     "pallet-ajuna-matchmaker/std",
     "pallet-ajuna-runner/std",
+#    "pallet-ajuna-template/std",
     "pallet-ajuna-nft/std",
     "ajuna-common/std",
     "ajuna-primitives/std",
