--- a/runtime/solo/Cargo.toml
+++ b/runtime/solo/Cargo.toml
@@ -20,8 +20,8 @@ hex-literal = { optional = true, version = "0.3.1" }
 log         = { default-features = false, version = "0.4.14" }
 
 # Parity codec dependencies
-codec      = { default-features = false, features = [ "derive" ], package = "parity-scale-codec", version = "3.0.0" }
-scale-info = { default-features = false, features = [ "derive" ], version = "2.1" }
+codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "3.1.5" }
+scale-info = { default-features = false, features = ["derive"], version = "2.1" }
 
 # Substrate dependencies
 frame-benchmarking                         = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", optional = true }
@@ -57,7 +57,7 @@ sp-transaction-pool                        = { default-features = false, git = "
 sp-version                                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
 
 # open-runtime-module-library
-orml-vesting = { default-features = false, git = "https://github.com/ajuna-network/open-runtime-module-library", rev = "polkadot-v0.9.20" }
+orml-vesting = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.27" }
 
 # Ajuna pallets
 ajuna-common                 = { default-features = false, path = "../../ajuna-common" }
