upgrade to polkadot v0.9.27

--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -11,13 +11,14 @@ version    = "0.1.0"
 substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
 
 [dependencies]
-clap = { version = "3.1", features = ["derive"] }
+clap  = { version = "3.1", features = [ "derive" ] }
 codec = { package = "parity-scale-codec", version = "3.1.5" }
-log = { version = "0.4.16", optional = true }
+log   = { version = "0.4.16", optional = true }
 
 # Local
 ajuna-primitives = { path = "../../primitives" }
 ajuna-service    = { path = "../service", optional = true }
+jsonrpsee        = { version = "0.14.0", features = [ "server" ] }
 
 # Substrate
 frame-benchmarking-cli  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
@@ -27,28 +28,30 @@ sc-cli                  = { git = "https://github.com/paritytech/substrate", bra
 sc-client-api           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
 sc-finality-grandpa     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
 sc-service              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", features = [ "wasmtime" ] }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
-sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
-sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
-sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
+sp-core                 = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
+sp-inherents            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
+sp-keyring              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
+sp-runtime              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
+sp-timestamp            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
 
 sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", optional = true }
-sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", optional = true }
+sc-tracing   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", optional = true }
 
 # Polkadot
-polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", optional = true }
-polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", optional = true }
+polkadot-cli        = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", optional = true }
+polkadot-parachain  = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", optional = true }
 polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27", optional = true }
 
 # Cumulus
-cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27", optional = true }
-cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27", optional = true }
+cumulus-client-cli      = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27", optional = true }
+cumulus-client-service  = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27", optional = true }
 cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27", optional = true }
 
 [features]
 default = [ "solo" ]
 
+ajuna = [ "ajuna-service/ajuna", "para" ]
+bajun = [ "ajuna-service/bajun", "para" ]
 para = [
     "log",
     "sc-telemetry",
@@ -61,12 +64,10 @@ para = [
     "cumulus-primitives-core",
 ]
 solo = [ "ajuna-service/solo" ]
-bajun = ["ajuna-service/bajun", "para"]
-ajuna = ["ajuna-service/ajuna", "para"]
 
-kusama-native = [ "polkadot-cli/kusama-native" ]
-rococo-native = [ "polkadot-cli/rococo-native" ]
+kusama-native   = [ "polkadot-cli/kusama-native" ]
 polkadot-native = [ "polkadot-cli/polkadot-native" ]
+rococo-native   = [ "polkadot-cli/rococo-native" ]
 
 runtime-benchmarks = [
     "ajuna-service/runtime-benchmarks",
